--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,12 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: |
+          docker version
+          # 登录阿里云镜像仓库
+          docker login --username=aliyun6164502686 --password=@ouyang0822 registry.cn-hangzhou.aliyuncs.com
+          cd xxl-job-admin
+          # 使用Dockerfile构建镜像
+          docker build . --file Dockerfile --tag registry.cn-hangzhou.aliyuncs.com/oyyz_online/mr_doc:1.0.0
+          # 推送镜像到镜像仓库
+          docker push registry.cn-hangzhou.aliyuncs.com/oyyz_online/mr_doc:1.0.0
